add_executable(3_2 3_2.cc)
add_executable(3_4 3_4.cc)
add_executable(3_5 3_5.cc)
add_executable(3_6 3_6.cc)
add_executable(3_7 3_7.cc)
add_executable(3_10 3_10.cc)
add_executable(3_14 3_14.cc)
add_executable(3_15 3_15.cc)
add_executable(3_17 3_17.cc)
add_executable(3_19 3_19.cc)
add_executable(3_20 3_20.cc)
add_executable(3_23 3_23.cc)
add_executable(3_25 3_25.cc)